# outbound-ip-monitor

./: .gitignore  README.md  generate.py  pyproject.toml
.github/workflows/: refresh.yml
outbound_ip_monitor/generate/: __init__.py
output/: outbound.json  outbound.txt
