[tool.poetry]
name = "outbound-ip-monitor"
version = "0.1.0"
description = ""
authors = ["Koyeb <hi@koyeb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dnspython = "^2.7.0"

[tool.poetry.scripts]
generate = 'outbound_ip_monitor.generate:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
